<resources>
    <string name="app_name">WorkAndTravel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">About Work and Travel</string>
    <string name="menu_gallery">States and Taxes</string>
    <string name="menu_slideshow">People\'s experiences</string>
    <string name="menu_tools">Agencies</string>
    <string name="menu_share">Embassies</string>
    <string name="menu_send">Send</string>
    <string name="intro1">What is the Summer Work and Travel Program (SWT)?</string>
    <string name="intro2">The Summer Work and Travel program is designed for foreign post-secondary students to enter the United States on a nonimmigrant visa to work and travel for a maximum of four months during their summer vacation. Last year over 450 Jordanian students received Summer Work and Travel visas.</string>
    <string name="intro3">The Summer Work and Travel program is designed for foreign post-secondary students to enter the United States on a nonimmigrant visa to work and travel for a maximum of four months during their summer vacation. Last year over 450 Jordanian students received Summer Work and Travel visas.  Most participants typically work in non-skilled service positions at resorts, hotels, restaurants, and amusement parks. However, summer internships are allowed in other U.S. businesses and organizations including, but not limited to: architecture, science research, graphic art/publishing and other media communication, advertising, computer software and electronics, and legal offices. The term of the internship may not exceed the four-month program duration and must be completed during the student’s summer vacation. U.S. State Department regulations prohibit the placement of program participants as domestic help in U.S. households or in positions requiring them to invest their own money for inventory such as door-to-door sales. Students may choose to apply to the Summer Work and Travel Program through the approved agencies in the United States or one of the approved Jordanian agencies listed below.</string>
    <string name="intro4">\tDivan International \n \n Cosmopolitan World Wide Experience \n \n Stationcom  \n \n Institute of International Cultural Exchange</string>
    <string name="intro5">When is the Summer Work and Travel (SWT) Season for Jordan?"   </string>
    <string name="intro6">The 2018 SWT program dates are June 15, 2018 to October 15, 2018. It is important to note that all participants should return to Jordan when their university starts the next semester.</string>
    <string name="intro7">Who is eligible to participate in the SWT program?</string>
    <string name="intro8">Must be enrolled in a full-time course of post-secondary study* and pursuing a degree from an accredited educational institution</string>
    <string name="intro9">Must demonstrate they will continue studies after participating in SWT; and Seniors must show strong plans for graduate school or work in Jordan upon their return</string>
    <string name="intro10">Must demonstrate English proficiency at a level at which they can successfully perform their job and live in the United States.</string>
    <string name="intro11">Final year students are eligible to take part in this program during the school’s major academic break immediately following their graduation, as long as they apply to participate in the program prior to graduation.</string>
    <string name="intro12">Can students who are refused a SWT visa re-apply during the same SWT season?</string>
    <string name="intro13">Yes, a previous refusal for a tourist or other type of visa does not preclude you from applying for a SWT visa. However, the SWT program is designed for bona fide students. Students who cannot demonstrate that they returned to Jordan in time last year to begin their classes will be refused a visa.  Furthermore, if the student makes purposeful misstatements as to when he or she returned to Jordan or when school started, they could be found permanently ineligible for a U.S. visa. Those students interested in re-applying for a visa should be able to provide additional or new information that was not available during their previous interview. This information must exhibit a substantial change in their situation or eligibility for a SWT visa.</string>
    <string name="visa1">PREPARE FOR THE VISA INTERVIEW</string>
    <string name="visa2">After your DS2019 has been issued, you\'ll get a pre-visa interview orientation scheduled. Your consultant will send you a list of all the documents required.</string>
    <string name="visa3">It is crucial to get all of them in time for your orientation. Otherwise we won\'t be able to schedule a visa interview.</string>
    <string name="visa4">Documents needed for your Visa Interview Orientation:</string>
    <string name="visa5">International passport – original</string>
    <string name="visa6">Completed DS160 – access link and instructions for completing will be provided by your consultant.</string>
    <string name="visa7">Picture – size 5х5. On paper and a digital version on a USB stick</string>
    <string name="visa8">Receipt for paid visa interview fee.</string>
    <string name="visa9">A copy of your Job Offer</string>
    <string name="visa10">Certificate of Enrollment from your university – issued for the current semester.</string>
    <string name="visa11">Student book</string>
    <string name="visa12">Copies of your previous USA visas – if you have any.</string>
    <string name="visa13">ATTEND THE VISA INTERVIEW</string>
    <string name="visa15">You\'ll know the exact date and time of your interview a few days after your visa orientation.</string>
    <string name="visa16">Do not be late for your interview! The US Embassy will not agree to reschedule it unless you prove a serious issue.</string>
    <string name="visa17">Get to the Embassy half an hour before the interview. Bring the Confirmation page from your orientation and a picture ID with you.</string>
    <string name="visa18">How does the interview go?</string>
    <string name="visa19">You\'ll go through a security check before entering the building. Do not bring liquids, weapons or sharp objects. All electronics should be switched off and turned to the security officers. Bring as few possessions as possible. Do not take pictures.\n\nAfter the security check, you will enter the Embassy building. There\'ll be representatives to guide. You\'ll wait for your fingerprints to be taken, and receive your documents /the ones that we have prepared on the visa interview orientation/.</string>
    <string name="visa20">At the time of the interview:</string>
    <string name="visa22">Keep calm</string>
    <string name="visa23">If you don\'t hear a question, ask the consul to repeat it</string>
    <string name="visa24">Do not lie</string>
    <string name="visa25">How will you receive your visa?</string>
    <string name="strH1">your name</string>
    <string name="strH2">your country</string>
    <string name="strH3">where have you been in the us?</string>
    <string name="strH4">Tell us about it</string>
    <string name="strUpload">Upload a photo</string>
    <string name="strpublish">Publish it</string>
    <string name="strCansel">Cancel</string>
    <string name="ar1">- برنامج تبادل ثقافي في الولايات المتحدة الامريكية، يحصل الطالب من خلاله على عقد عمل\"مش في تخصصه\" بقدر من خلاله يشتغل ويحصل على راتب بالإضافة انه بكون متأمن بسكن وتأمين صحي</string>
    <string name="ar2"> البرنامج خلال فترة الصيف فقط ومسموح العمل في الفترة من 1-6 ولغاية شهر 10 تقريبا.</string>
    <string name="ar3">متى ببلش و كم مدته؟</string>
    <string name="ar34">شروط البرنامج</string>
    <string name="ar5">تكون طالب جامعة او بكالوريس او دكتوراهو مخلص بحدود ال 30 ساعة</string>
    <string name="ar6">معدلك يكون فوق ال2  يفضل يكون فوق ال2.3 او ال65٪؜</string>
    <string name="ar7">ما تكون خريج يعني بس ترجع من البرنامج يكون ضل عليك ساعات.</string>
    <string name="ar8">شو طبيعةالشغل؟</string>
    <string name="ar9">الشغل بكون اشي ما اله علاقة بتخصصك، زي فندق، مطعم، مول، مدينة ملاهي، مدينة مائية، كافيه، منقذ سباحة...</string>
    <string name="ar10">كم الراتب وكم ساعات الشغل بتكون؟</string>
    <string name="ar11">الراتب هناك بالساعة والرواتب بتعتمد على الولاية ومكان الشغل بشكل أساسي\n بس تقريباً اغلب الرواتب بتكون 8-12 دولار بالساعة\n عدد الساعات بالأسبوع بيعتمد على شغلات كثير بس بالعادة يكون 32-40 ساعة.</string>
    <string name="ar12">مين بيدفع أجار السكن؟</string>
    <string name="ar13">باغلب العقود بكون السكن مأمن بس الطالب الي بيدفع الأجار، وبعقود قليلة جدا يكون السكن مجاناً</string>
    <string name="ar14">وتكلفة السكن بتعتمد على المكان بس تقريبا من 50-100 دولار بالأسبوع.</string>
    <string name="ar15">شو نوع ال VISA و هل هي سهلة و كيف مقابلة السفارة؟</string>
    <string name="ar16">نوع الفيزا J1، وتعتبر من أسهل الفيز ونسبة قبولها جدا عالية، مقابلة السفارة كل سنة بتعمل ايفنت وينشرح عنها بشكل مطول بس بشكل عام الموضوع ما بيخوف</string>
    <string name="ar17">معدلي تحت ال 2.3 ممكن انقبل؟</string>
    <string name="ar18">أكيد ممكن بس فرصتك اقل، من كم سنة كان كثير طلاب معدلهم ٢ وينقبلوا، بس جديد صار الموضوع أصعب،\n بس برأيي الموضوع يستحق شرف المحاولة</string>
    <string name="ar19">لغتي ضعيفة عادي؟</string>
    <string name="ar20">اه أكيد، البرنامج من أهدافه تحسين لغة الطالب، المقابلة بالسفارة بتكون بالإنجليزي والمطلوب منك تكون بتعرف اساسيات المحادثة وتعرف تجاوب على الأسئلة الي يسألها القنصل والموضوع جدا سهل، وأي طالب وصل الجامعة المفروض يعرف يدبر اموره.</string>
    <string name="ar21">كم تكلفة البرنامج؟</string>
    <string name="ar22">البرنامج تقريبا بيكلف 1300 الى 1400 للمكتب، 113 دينار للسفارة\n و تذكرة الطيران 50 الى 700 دينار تقريبا \nبالإضافة انه الطالب بده يعمل حسابه بمصروف اول فترة.</string>
    <string name="ar23">كم ممكن ارجع من البرنامج وهل صحيح أني رح اجيب مصاري كثير وأحقق كل أحلامي!</string>
    <string name="ar24">الموضوع بختلف من شخص ل شخص وكل واحد اله تجربة مختلفة، في طلاب رجعت من البرنامج خسرانه وعليها فلوس و في طلاب رجعت معها فلوس كثير و في طلاب رجعت الفلوس الي دفعتها و رجعت بملغ إضافي، الفئتين الأولى والثانية عددهم جدا جدا جدا قليل خصوصًا الثانية و الاغلب بكون من الفئة الثالثة، عشان هيك ما حد يعلق اماله وطموحاته على البرنامج لانه رح يتعذب نفسياً و غالبا ما تزبط معه، بس زي ما حكيت الأغلب برجع المبلغ الي دفعه بالإضافة لمبلغ اضافي</string>
    <string name="ar25">بقدر اشتغل شغل ثاني ؟</string>
    <string name="ar26">أكيد اغلب الطلاب بتعمل هيك لكن في بعض العقود يكون فيها الموضوع صعب حسب طبيعة العمل و المكان.</string>
    <string name="ar27">متى التقديم ببلش ومتى بنتهي؟</string>
    <string name="ar28">التقديم بلش من شهر 8 و بنتهي بس تخلص المقاعد، الموضوع يختلف من سنة ل سنة بس اذا ناوي لا تاخر الموضوع و سجل بأسرع وقت.</string>
    <string name="ar29">في بنات شاركوا بالبرنامج وهل الموضوع آمن؟</string>
    <string name="ar30">باخر سنتين عدد البنات المشاركات زاد بشكل كبير،  من ناحية الأمان، بالبداية البنت بدها تكون قد حالها لانه في شباب راحت هناك وما كملت أسبوعين، من ناحية الأمان، امريكا قارة وفي مليون مكان سيء و مليون كمان منيح، بدها تختار مكان مناسب ك طبيعة عمل و ولاية و يفضل انها تبعد عن ولايات الجنوب، وتروح ع الأماكن الي معروفة بتواجد العرب والمسلمين فيها،</string>
    <string name="ar31">كم بخسر اذا انرفضت؟</string>
    <string name="ar32">في حال الرفض من السفارة بتقدر ترجع تقدم اكثر من مرة بس في حال قررت تنسحب من البرنامج بعد ما انرفضت رح يرجعلك كامل المبلغ الي دفعته الا ( 275- 400) دينار حسب المكتب بالإضافة لرسوم السفارة.</string>
    <string name="strBout">About</string>
    <string name="shareStr">Share and Rate</string>
</resources>